program translations: update Spanish

--- a/po/es.po
+++ b/po/es.po
@@ -172,18 +172,17 @@ msgstr ""
 "                           almacenado para el siguiente adjunto.\n"
 
 #: src/merge/mkvmerge.cpp:288
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "  --audio-emphasis <TID:n|keyword>\n"
 "                           Sets the audio emphasis track header value. It can\n"
 "                           be either a number or a keyword (see\n"
 "                           '--list-audio-emphasis' for the full list).\n"
 msgstr ""
-"  --stereo-mode <TID:n|keyword>\n"
-"                           Establecer el parámetro del modo estéreo.\n"
-"                           Pude ser un número de 0 - 14, o una\n"
-"                           palabra clave (mirar documentación\n"
-"                           para una lista completa).\n"
+" --audio-emphasis <TID:n|palabra clave>\n"
+"                           Establece el valor de la cabecera de la pista de\n"
+"                           énfasis de audio. Puede ser un número o una palabra clave\n"
+"                           (consulte --list-audio-emphasis' para la lista completa).\n"
 
 #: src/merge/mkvmerge.cpp:266
 #, no-c-format
