program translations: update French

--- a/po/fr.po
+++ b/po/fr.po
@@ -5799,7 +5799,7 @@ msgstr "Fichier de destination :"
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:248
 #, no-c-format
 msgid "Destination folders's absolute path"
-msgstr "Chemin absolu du dossier destination"
+msgstr "Chemin absolu des dossiers destination"
 
 #: src/mkvtoolnix-gui/forms/merge/select_playlist_dialog.h:310
 #, no-c-format
