--- a/doc/man/po4a/po/ca.po
+++ b/doc/man/po4a/po/ca.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix\n"
 "POT-Creation-Date: 2022-10-01 19:51+0200\n"
-"PO-Revision-Date: 2016-02-03 20:53+0000\n"
+"PO-Revision-Date: 2022-10-08 15:14+0200\n"
 "Last-Translator: Antoni Bella Pérez <antonibella5@yahoo.com>, 2016-2022\n"
 "Language-Team: Catalan (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/ca/)\n"
 "Language: ca\n"
@@ -38,10 +38,8 @@ msgstr "70.0.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-#, fuzzy
-#| msgid "2022-05-22"
 msgid "2022-08-14"
-msgstr "22/05/2022"
+msgstr "14/08/2022"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -2993,17 +2991,13 @@ msgstr "Si el mkvmerge detecta erròniament que un fitxer <abbrev>AAC</abbrev> e
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:1637
-#, fuzzy
-#| msgid "<option>--timestamps</option> <parameter>TID:file-name</parameter>"
 msgid "<option>--audio-emphasis</option> <parameter>TID:n|symbolic-name</parameter>"
-msgstr "<option>--timestamps</option> <parameter>TID:nom_fitxer</parameter>"
+msgstr "<option>--audio-emphasis</option> <parameter>TID:n|symbolic-name</parameter>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1640
-#, fuzzy
-#| msgid "Sets the stereo mode for the video track with the track ID <parameter>TID</parameter>.  The mode can either be a number <parameter>n</parameter> between <constant>0</constant> and <constant>14</constant> or one of these keywords:"
 msgid "Sets the emphasis for the audio track with the track ID <parameter>TID</parameter>.  The mode can either be a number <parameter>n</parameter> (certain values between <constant>0</constant> and <constant>16</constant>) or a symbolic name. All valid numbers &amp; symbolic names can be listed with the <link linkend=\"mkvmerge.description.list_audio_emphasis\"><option>--list-audio-emphasis</option> option</link>."
-msgstr "Estableix el mode estèreo per a la pista de vídeo amb l'ID de pista <parameter>TID</parameter>. El mode pot ser un número <parameter>n</parameter> entre <constant>0</constant> i <constant>14</constant> o una d'aquestes paraules clau:"
+msgstr "Estableix l'èmfasi per a la pista d’àudio amb l’ID de la pista <parameter>TID</parameter>. El mode pot ser un número <parameter>n</parameter> (certs valors entre <constant>0</constant> i <constant>16</constant>) o un nom simbòlic. Tots els números vàlids i els noms simbòlics es poden llistar amb l'opció <link linkend=\"mkvmerge.description.list_audio_emphasis\"><option>--list-audio-emphasis</option></link>."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:1649
@@ -3409,17 +3403,13 @@ msgstr "<constant>0</constant>: progressiu; <constant>1</constant>: entrellaçat
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:2067
-#, fuzzy
-#| msgid "<option>--stereo-mode</option> <parameter>TID:n|keyword</parameter>"
 msgid "<option>--stereo-mode</option> <parameter>TID:n|symbolic-name</parameter>"
-msgstr "<option>--stereo-mode</option> <parameter>TID:n|paraula_clau</parameter>"
+msgstr "<option>--stereo-mode</option> <parameter>TID:n|symbolic-name</parameter>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:2070
-#, fuzzy
-#| msgid "Sets the stereo mode for the video track with the track ID <parameter>TID</parameter>.  The mode can either be a number <parameter>n</parameter> between <constant>0</constant> and <constant>14</constant> or one of these keywords:"
 msgid "Sets the stereo mode for the video track with the track ID <parameter>TID</parameter>.  The mode can either be a number <parameter>n</parameter> between <constant>0</constant> and <constant>14</constant> or a symbolic name. All valid numbers &amp; names can be listed with the <link linkend=\"mkvmerge.description.list_stereo_modes\"><option>--list-stereo-modes</option> option</link>."
-msgstr "Estableix el mode estèreo per a la pista de vídeo amb l'ID de pista <parameter>TID</parameter>. El mode pot ser un número <parameter>n</parameter> entre <constant>0</constant> i <constant>14</constant> o una d'aquestes paraules clau:"
+msgstr "Estableix el mode estèreo per a la pista d’àudio amb l’ID de la pista <parameter>TID</parameter>. El mode pot ser un número <parameter>n</parameter> entre <constant>0</constant> i <constant>14</constant> o un nom simbòlic. Tots els números vàlids i els noms simbòlics es poden llistar amb l'opció <link linkend=\"mkvmerge.description.list_stereo_modes\"><option>--list-stereo-modes</option></link>."
 
 #. type: Content of: <refentry><refsect1><refsect2><title>
 #: doc/man/mkvmerge.xml:2080
@@ -3493,10 +3483,8 @@ msgstr "La sortida del format <literal>json</literal>  és una representació JS
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><orderedlist><listitem><para>
 #: doc/man/mkvmerge.xml:2150
-#, fuzzy
-#| msgid "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v16.json\"><literal>mkvmerge-identification-output-schema-v16.json</literal></ulink>"
 msgid "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v17.json\"><literal>mkvmerge-identification-output-schema-v17.json</literal></ulink>"
-msgstr "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v16.json\"><literal>mkvmerge-identification-output-schema-v16.json</literal></ulink>"
+msgstr "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v17.json\"><literal>mkvmerge-identification-output-schema-v17.json</literal></ulink>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><orderedlist><listitem><para>
 #: doc/man/mkvmerge.xml:2154
@@ -3520,17 +3508,13 @@ msgstr "Si les pistes són conegudes per estar presents, però no s'han trobat, 
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:2178
-#, fuzzy
-#| msgid "<option>--list-languages</option>"
 msgid "<option>--list-audio-emphasis</option>"
-msgstr "<option>--list-languages</option>"
+msgstr "<option>--list-audio-emphasis</option>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:2181
-#, fuzzy
-#| msgid "Lists all languages and their ISO 639-2 code which can be used with the <link linkend=\"mkvmerge.description.language\"><option>--language</option></link> option."
 msgid "Lists all valid numbers &amp; their corresponding symbolic names for the <link linkend=\"mkvmerge.description.audio_emphasis\"><option>--audio-emphasis</option></link> option."
-msgstr "Llista tots els idiomes i el seu codi ISO 639-2 que es poden emprar amb l'opció <link linkend=\"mkvmerge.description.language\"><option>--language</option></link>."
+msgstr "Llista tots els números vàlids i els seus noms simbòlics corresponents per a l'opció <link linkend=\"mkvmerge.description.audio_emphasis\"><option>--audio-emphasis</option></link>."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:2188
@@ -3544,17 +3528,13 @@ msgstr "Llista tots els idiomes i el seu codi ISO 639-2 que es poden emprar amb 
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:2198
-#, fuzzy
-#| msgid "<option>--gui-mode</option>"
 msgid "<option>--list-stereo-modes</option>"
-msgstr "<option>--gui-mode</option>"
+msgstr "<option>--list-stereo-modes</option>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:2201
-#, fuzzy
-#| msgid "Lists all languages and their ISO 639-2 code which can be used with the <link linkend=\"mkvmerge.description.language\"><option>--language</option></link> option."
 msgid "Lists all valid numbers &amp; their corresponding symbolic names for the <link linkend=\"mkvmerge.description.stereo_mode\"><option>--stereo-mode</option></link> option."
-msgstr "Llista tots els idiomes i el seu codi ISO 639-2 que es poden emprar amb l'opció <link linkend=\"mkvmerge.description.language\"><option>--language</option></link>."
+msgstr "Llista tots els números vàlids i els seus noms simbòlics corresponents per a l'opció <link linkend=\"mkvmerge.description.stereo_mode\"><option>--stereo-mode</option></link>."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:2208
