--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,9 @@
+mkvtoolnix (71.0.0-0~bunkus01) jammy; urgency=low
+
+  * New version.
+
+ -- Moritz Bunkus <moritz@bunkus.org>  Sat, 08 Oct 2022 15:19:08 +0200
+
 mkvtoolnix (70.0.0-0~bunkus01) jammy; urgency=low
 
   * New version.
