--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,9 @@
+mkvtoolnix (71.1.0-0~bunkus01) jammy; urgency=low
+
+  * New version.
+
+ -- Moritz Bunkus <moritz@bunkus.org>  Sun, 09 Oct 2022 13:03:58 +0200
+
 mkvtoolnix (71.0.0-0~bunkus01) jammy; urgency=low
 
   * New version.
